# drf-pdf-export

./: .gitignore  pyproject.toml
exporter/: manage.py
exporter/exporter/: asgi.py  settings.py  urls.py  wsgi.py
exporter/pdfexport/: urls.py  views.py
exporter/pdfexport/templates/: simple.html
